--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,7 +49,7 @@
         width: 100px;
         height: 100px;
         border-radius: 25%;
-        background-color: #e91e63;
+        background-color: #fa96b7;
         margin: 0px auto;
         -webkit-animation: sk-rotateplane 2.4s infinite ease-in-out;
         animation: sk-rotateplane 2.4s infinite ease-in-out;
